--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </div>
   </body>
   <script>
-    var token = window.location.href.split("code=")
+    var token = window.location.href.split("access_token=")[1].split("&")[0]
     if(token.length>1) {
       token = token[1].split("&")[0];
       document.getElementById("token").innerHTML = token;
